# superannotate-sdk-core

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
src/superannotate_core/app/: __init__.py
src/superannotate_core/core/: conditions.py  constants.py  enums.py  exceptions.py
src/superannotate_core/core/entities/: __init__.py  base.py  classes.py  item.py  project.py  user.py
src/superannotate_core/infrastructure/: __init__.py  session.py
src/superannotate_core/infrastructure/repositories/: __init__.py  annotation_repository.py  base.py  classes_repository.py  folder_repository.py  item_repository.py  limits_repository.py  proejct_repository.py  setting_repository.py  subset_repository.py  utils.py
