[project]
name = "superannotate_core"
version = "0.0.1"
license = {file = "LICENSE"}
authors = [
  { name="Vaghinak Basentsya", email="vaghinak@superannotate.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"